# clawdeck

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  FEATURES.md  PROJECT_STATUS.md  SETUP.md
scripts/: build.py  dev.py  install_windows.ps1  uninstall_windows.ps1
src/clawdeck/: __init__.py  __main__.py  app.py  cli.py  config.py  federation.py  logging_setup.py  models.py  profiles.py  secrets.py
src/clawdeck/core/: cron.py  gateway.py  history.py  monitor.py  origin_sync.py  resources.py  tailscale.py  tunnel.py  usage.py  vm.py
src/clawdeck/services/: autostart.py  notify.py  plugins.py  updater.py
src/clawdeck/ui/: icons.py  tray.py  window.py  wizard.py
src/clawdeck/ui/components/: qr.py  sparkline.py  status_card.py
src/clawdeck/ui/views/: chat.py  cron.py  home.py  logs.py  settings.py  tailscale.py  usage.py
src/clawdeck/utils/: escaping.py  paths.py  platform.py
tests/: test_autostart.py  test_config.py  test_federation.py  test_gateway.py  test_history.py  test_icons.py  test_models.py  test_notify.py  test_plugins.py  test_profiles.py  test_qr.py  test_resources.py  test_tailscale.py  test_tunnel.py  test_updater.py
