[project]
name = "clawdeck"
version = "0.1.0"
description = "Personal desktop control panel for OpenClaw agents"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Ulysses Kyle Puzon" },
]
keywords = ["openclaw", "agent", "desktop", "tray", "virtualbox", "tunnel"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "flet>=0.24.0",
    "flet-desktop>=0.24.0",
    "pystray>=0.19.5",
    "Pillow>=10.0.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "keyring>=25.0.0",
    "tomli-w>=1.0.0",
    "platformdirs>=4.2.0",
    "psutil>=5.9.0",
    "qrcode[pil]>=7.4.2",
    "rich>=13.7.0",
    "click>=8.1.7",
    # Windows toast notifications — optional at runtime but declared so the
    # frozen .exe has them available.
    "winrt-Windows.UI.Notifications>=3.2; sys_platform == 'win32'",
    "winrt-Windows.Data.Xml.Dom>=3.2; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.4.0",
    "pyright>=1.1.360",
    "pyinstaller>=6.5.0",
]

[project.scripts]
clawdeck = "clawdeck.cli:main"

[project.gui-scripts]
clawdeck-gui = "clawdeck.cli:main"

[project.urls]
Homepage = "https://github.com/ulyssespuzon/clawdeck"
Issues = "https://github.com/ulyssespuzon/clawdeck/issues"
Changelog = "https://github.com/ulyssespuzon/clawdeck/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clawdeck"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function calls in defaults are fine for dataclasses
    "RUF001", "RUF002", "RUF003",  # allow unicode ×, em-dash etc in docstrings
    "SIM105", "SIM112",            # stylistic; not worth the churn
]

[tool.ruff.lint.isort]
known-first-party = ["clawdeck"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "standard"
pythonVersion = "3.11"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:websockets.*",
]
